git-svn-id: http://svn.vdombox.ru/flextools/trunk@6931 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/Wysiwyg.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/Wysiwyg.mxml
@@ -53,6 +53,10 @@
 		{
 			skinClass : ClassReference("net.vdombox.ide.modules.wysiwyg.view.skins.StateSelectorSkin");
 		}
+		global
+		{
+			selection-color: #0268F3;
+		}
 	</fx:Style>
 	
 	<fx:Script>
