--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
@@ -85,7 +85,7 @@
 			<s:Button width="138" height="29" 
 					  icon="@Embed(source='icons/Add.png')"
 					  label="Resources" cornerRadius="15" 
-					  click="{dispatchEvent( new AttributeEvent( AttributeEvent.SELECT_RESOURCE ) )}"/>
+					  click="{hostComponent.showResourceSelecterWindow()}"/>
 			
 			<s:Spacer width="100%"/>
 			
