--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
@@ -1,26 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-	ListItem component for Resource Browser, VDOM2 Box component
-	Developed by Vadim A. Usoltsev, Tomsk, Russia, 2008
--->
-	
-<mx:Box xmlns:mx="http://www.adobe.com/2006/mxml"
-		borderColor="#FFF6EA"
-		horizontalAlign="left" borderStyle="solid"
-		verticalAlign="middle" verticalScrollPolicy="off"
-		horizontalScrollPolicy="off"
-		paddingTop="1" paddingLeft="1" paddingRight="1" paddingBottom="1"
-		cornerRadius="3" verticalGap="1" horizontalGap="1">
 
-<mx:HBox height="50" 
-		 horizontalAlign="left" borderStyle="solid"
-		 verticalAlign="middle" verticalScrollPolicy="off"
-		 horizontalScrollPolicy="off"
-		 paddingTop="3" paddingLeft="3" paddingRight="3" paddingBottom="3"
-		 cornerRadius="1" verticalGap="1" horizontalGap="3"
-		 xmlns:resourceBrowserWindow="net.vdombox.ide.modules.wysiwyg.view.components.windows.resourceBrowserWindow.*" borderColor="#ADA8A8" width="178">
-	
-	<mx:Script>
+<s:ItemRenderer  xmlns:fx="http://ns.adobe.com/mxml/2009"
+				 xmlns:s="library://ns.adobe.com/flex/spark"
+				 xmlns:mx="library://ns.adobe.com/flex/mx">
+
+	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.common.vo.ResourceVO;
 			
@@ -37,18 +21,8 @@
 				super.data = value;
 				resourceVO = value as ResourceVO;
 				
-				/*if ( resourceVO )
-				{
-					if ( resourceVO.icon == null )
-						trace( "ListItem:        " + temp + "name " +resourceVO.name + "type " +resourceVO.type + "id " +resourceVO.id + " icon null   " );
-					else 
-						trace( "ListItem:        " + temp + "name " +resourceVO.name + "type " +resourceVO.type + "id " +resourceVO.id + " icon " );
-					temp++;
-				}*/
-				
-				
 				resName.text = '';
-//				проверить
+				//				проверить
 				res.text = '';				
 				
 				try 
@@ -61,7 +35,7 @@
 				{
 					trace ("ThumbnailItem: exception at data setter!"); 
 				}
-
+				
 				if ( resourceVO )
 					smoothImage.source = resourceVO.icon;
 			}
@@ -101,56 +75,93 @@
 			{
 				//Alert.show( "Delete resource: " +  resourceVO.name + "?", "Alert!", Alert.YES | Alert.NO, this, acceptDeleteHandler )
 				acceptDeleteHandler();
-//				owner.dispatchEvent( new Event( "DeleteResource", true, true ));
+				//				owner.dispatchEvent( new Event( "DeleteResource", true, true ));
 			}
 			
 			private function acceptDeleteHandler() : void// (event : CloseEvent ) : void
 			{
-//				if ( event.detail == Alert.YES )
-//				{
-					var lie : ListItemEvent = new ListItemEvent( ListItemEvent.DELETE_RESOURCE );
-					lie.resource = resourceVO;
-					owner.dispatchEvent( lie );
-//				}
+				//				if ( event.detail == Alert.YES )
+				//				{
+				var lie : ListItemEvent = new ListItemEvent( ListItemEvent.DELETE_RESOURCE );
+				lie.resource = resourceVO;
+				owner.dispatchEvent( lie );
+				//				}
 			}
 			
 		]]>
-	</mx:Script>
+	</fx:Script>
 	
-	<mx:Box width="44" height="44" paddingLeft="0" paddingRight="0" paddingBottom="0" paddingTop="0" backgroundColor="#FFFFFF"
-			verticalAlign="middle" horizontalAlign="center">
-		
-		<resourceBrowserWindow:SmoothImage id="smoothImage" height="42" width="42"
-			verticalAlign="middle" horizontalAlign="center" maintainAspectRatio="true"
-			scaleContent="true" />
-			
-	</mx:Box>
-		
-	<mx:VBox width="122" horizontalGap="0" verticalGap="1" horizontalScrollPolicy="off" verticalScrollPolicy="off" verticalAlign="middle">
-		
-		<mx:HBox width="100%" horizontalAlign="left" horizontalGap="3" paddingRight="5" verticalAlign="middle">
-			
-			<mx:Label id="type" text="JPG:" textAlign="left" fontWeight="bold" />
-			
-			<mx:Label id="res" text="" textAlign="left" />
-			
-			<mx:Spacer width="100%"/>
-			
-			<mx:Button id="deleteButton"
-					   enabled="true"
-					   cornerRadius="0" label="x" width="18" height="18" fontWeight="bold" fontSize="10"
-					   toolTip="Delete"
-					   paddingLeft="0" paddingRight="0"
-					   paddingTop="0" paddingBottom="0"
-					   color="#FF0000"
-					   click="deleteButton_clickHandler( event );"/>	
-			
-		</mx:HBox>
-		
-		<mx:Label id="resName" text="img" textAlign="left" width="122" />	
 	
-	</mx:VBox>
+	<s:states>
+		<s:State name="normal" />
+		<s:State name="hovered" />	
+		<s:State name="selected" />
+	</s:states>
 	
-</mx:HBox>
+	<s:Group height="50" width="178">
 	
-</mx:Box>
+		<!--<s:Rect height="100%" width="100%" radiusX="5" radiusY="5" includeIn="selected">
+			<s:fill>
+				<s:SolidColor color.selected="red" color.normal="green" color.hovered="blue"/>
+			</s:fill>
+		</s:Rect>-->
+		
+		<!--<s:Rect height="100%" width="100%" radiusX="5" radiusY="5" includeIn="normal">
+			<s:fill>
+				<s:SolidColor color="green"/>
+			</s:fill>
+		</s:Rect>
+		
+		<s:Rect height="100%" width="100%" radiusX="5" radiusY="5" includeIn="hovered">
+			<s:fill>
+				<s:SolidColor color="blue"/>
+			</s:fill>
+		</s:Rect>-->
+		
+		<s:HGroup height="100%" width="100%"  
+			 		horizontalAlign="left"
+			 		verticalAlign="middle"
+			 		paddingTop="3" paddingLeft="3" paddingRight="3" paddingBottom="3"
+			 		gap="3"
+			 		xmlns:resourceBrowserWindow="net.vdombox.ide.modules.wysiwyg.view.components.windows.resourceBrowserWindow.*" >
+		
+			<s:Group width="44" height="44" left="0" right="0" bottom="0" top="0">
+				
+				<resourceBrowserWindow:SmoothImage id="smoothImage" height="42" width="42"
+					verticalAlign="middle" horizontalAlign="center" maintainAspectRatio="true"
+					scaleContent="true" />
+					
+			</s:Group>
+				
+			<s:VGroup width="122" gap="1">
+				
+				<s:HGroup width="100%" gap="3" right="5" verticalAlign="middle">
+					
+					<s:Label id="type" text="JPG:" textAlign="left" fontWeight="bold" />
+					
+					<s:Label id="res" text="" textAlign="left" />
+					
+					<s:Spacer width="100%"/>
+					
+					<s:Button id="deleteButton"
+							   enabled="true"
+							   label="x"
+							   width="18" height="18"
+							   cornerRadius="0" 
+							   fontWeight="bold" fontSize="10"
+							   toolTip="Delete"
+							   left="0" right="0" top="0" bottom="0"
+							   color="#FF0000"
+							   click="deleteButton_clickHandler( event );"/>	
+					
+				</s:HGroup>
+				
+				<s:Label id="resName" text="img" textAlign="left" width="122" />	
+			
+			</s:VGroup>
+			
+		</s:HGroup>
+		
+	</s:Group>
+	
+</s:ItemRenderer>
