--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourceSelectorWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourceSelectorWindowSkin.mxml
@@ -17,7 +17,17 @@
 	</fx:Metadata> 
 	<fx:Script>
 		<![CDATA[
+			import mx.events.FlexEvent;
+			
 			import net.vdombox.ide.modules.wysiwyg.events.ResourceSelectorWindowEvent;
+			
+			
+			protected function resourcesList_initializeHandler(event:FlexEvent):void
+			{
+				// TODO Auto-generated method stub
+				trace ("11111111111111");
+			}
+			
 		]]>
 	</fx:Script>
 	
@@ -110,9 +120,8 @@
 					<s:List id="resourcesList" width="100%" height="100%"
 								 allowMultipleSelection="{hostComponent.multilineSelected}" 
 								 enabled="true"
-								 change="hostComponent.selectResource(event)"
 								 contentBackgroundAlpha="0" contentBackgroundColor="#000000" borderVisible="false"
-								 dataProvider="{ hostComponent._resources }" 
+								 dataProvider="{ hostComponent._resources }"
 								 horizontalScrollPolicy="auto"
 								 itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.windows.resourceBrowserWindow.ListItem"
 								 verticalScrollPolicy="on"
@@ -120,7 +129,9 @@
 								 chromeColor="#777777"
 								 focusColor="#CCCCCC" 
 								 rollOverColor="#000000" selectionColor="#000000"
-								 top="20" left="4" right="2" bottom="10">
+								 top="20" left="4" right="2" bottom="10"
+								 change="hostComponent.selectResource(event)"
+								 initialize="resourcesList_initializeHandler(event)">
 						<s:layout>
 							<s:TileLayout horizontalGap="4" verticalGap="8" requestedColumnCount="4"  requestedRowCount="2">
 								
