--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/CreateApplicationView.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/CreateApplicationView.mxml
@@ -8,7 +8,7 @@
 					color="white"
 					creationComplete="navigatorcontent1_creationCompleteHandler(event)"
 					
-					skinClass="spark.skins.spark.SkinnableContainerSkin">
+					skinClass="spark.skins.spark.SkinnableContainerSkin" xmlns:mx1="library://ns.adobe.com/flex/mx">
 
 	<fx:Script>
 		<![CDATA[
@@ -122,7 +122,7 @@
 				</s:fill>
 			</s:Rect>
 
-			<s:VGroup bottom="7" left="7" right="7" top="7">
+			<mx1:VDividedBox bottom="7" left="7" right="7" top="7">
 
 				<s:Label text="Language:"
 						 fontFamily="Verdana" fontSize="14" fontWeight="bold" />
@@ -134,7 +134,7 @@
 				<s:RadioButton label="python" value="python"
 							   group="{languageGroup}" 
 							   skinClass="spark.skins.spark.RadioButtonSkin"/>
-			</s:VGroup>
+			</mx1:VDividedBox>
 		</s:Group>
 
 		<s:HGroup>
