--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ColorPickerWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ColorPickerWindowSkin.mxml
@@ -122,7 +122,7 @@
 						<s:Label text="%" />
 					</s:HGroup>
 					
-					<s:Spacer height="4" />
+					<mx:Spacer height="4" />
 					
 					<s:HGroup>
 						
@@ -163,7 +163,7 @@
 			</s:HGroup>
 		</s:Group>
 		
-		<s:Spacer height="100%"/>
+		<mx:Spacer height="100%"/>
 	
 		<s:Group width="100%" height="100%">
 			<s:Rect width="100%" height="100%">
@@ -201,10 +201,10 @@
 							 	restrict="a-fA-F0-9" text="" width="80"/>
 				</s:HGroup>
 			
-				<s:Spacer width="100%" />
+				<mx:Spacer width="100%" />
 			
-				<s:Button width="48" height="29" cornerRadius="15"
-						  icon="@Embed(source='icons/Cancel.png')" iconPlacement="top"
+				<mx:Button width="48" height="29" cornerRadius="15"
+						  icon="@Embed(source='icons/Cancel.png')"
 					  		click="hostComponent.cancel_close_window()" />
 			
 				<s:Button label="Use" width="88" height="29" cornerRadius="15" fontSize="18"
