--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
@@ -48,7 +48,6 @@
 				if (size >= 0) {
 					resSize.text = (size/1000).toString() + "kb"; 
 				}
-				
 			}
 			
 			
@@ -166,7 +165,8 @@
 						<mx:Image height="25" width="25" 
 								 mouseEnabled="false" mouseChildren="false" mouseFocusEnabled="false"
 								 source="@Embed('assets/magnifier.png')" 
-								 verticalAlign="middle" horizontalAlign="center"/>
+								 verticalAlign="middle" horizontalAlign="center"
+								 smoothBitmapContent="true"/>
 					</s:HGroup>
 					
 				</s:Group>
