--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
@@ -6,6 +6,8 @@
 	
 	<fx:Script>
 		<![CDATA[
+			import mx.events.FlexEvent;
+			
 			import net.vdombox.ide.common.vo.ResourceVO;
 			
 			private var _id : String;
@@ -17,18 +19,26 @@
 			
 			private var temp:int = 0;
 			
+			
 			override public function set data ( value : Object ) : void 
 			{
+				trace ("!!!!!!!!! set data !!!!!!!!!!");
+				
 				super.data = value;
+				
+				if (!value) {
+					itemViewEmpty = true;
+					return;
+				}
+				
+				itemViewEmpty = false;
+				
 				resourceVO = value as ResourceVO;
 				
 				resName.text = '';
-				//				проверить
-				//res.text = '';				
 				
 				try 
 				{
-					
 					objName = resourceVO.name;
 					objType = resourceVO.type;
 					objID	= resourceVO.id;
@@ -41,8 +51,15 @@
 				
 				if ( resourceVO )
 					smoothImage.source = resourceVO.icon;
+				
 			}
 			
+			public function set itemViewEmpty(isEmptyType:Boolean):void
+			{
+				this.groupEmpty.visible = isEmptyType;
+				this.gropuNotEmpty.visible = !isEmptyType;
+			}
+				
 			public function set objSize(size:int):void
 			{
 				if (size >= 0) {
@@ -120,7 +137,7 @@
 		<s:State name="selected" />
 	</s:states>
 	
-	<s:Group height="64" width="184">
+	<s:Group height="64" width="184" id="gropuNotEmpty" visible="true">
 		
 		<s:Rect height="100%" width="100%" radiusX="4" radiusY="4">
 			<s:stroke>
@@ -163,10 +180,10 @@
 					
 					<s:HGroup height="100%" width="100%" horizontalAlign="center" verticalAlign="middle">
 						<mx:Image height="25" width="25" 
-								 mouseEnabled="false" mouseChildren="false" mouseFocusEnabled="false"
-								 source="@Embed('assets/magnifier.png')" 
-								 verticalAlign="middle" horizontalAlign="center"
-								 smoothBitmapContent="true"/>
+								  mouseEnabled="false" mouseChildren="false" mouseFocusEnabled="false"
+								  source="@Embed('assets/magnifier.png')" 
+								  verticalAlign="middle" horizontalAlign="center"
+								  smoothBitmapContent="true"/>
 					</s:HGroup>
 					
 				</s:Group>
@@ -174,7 +191,7 @@
 			</s:Group>
 			<mx:Spacer width="2" />
 			
-			<s:VGroup width="100%" height="30" gap="1" verticalAlign="middle" horizontalAlign="center">
+			<s:VGroup width="100%" height="30" gap="1" verticalAlign="middle" horizontalAlign="center" paddingTop="3">
 				<s:Label id="resName" width="100%" height="100%" text="img" textAlign="left" color="black" 
 						 fontWeight="bold" fontFamily="Arial" fontSize="12" toolTip="{this.resName.text}"/>
 				
@@ -201,5 +218,36 @@
 			
 		</s:HGroup>		
 	</s:Group>
+
+	<s:Group height="64" width="184" id="groupEmpty" visible="false">
+		<s:Rect height="100%" width="100%" radiusX="4" radiusY="4">
+			<s:stroke>
+				<s:SolidColorStroke color="#424242" weight="1"/>
+			</s:stroke>
+			<s:fill>
+				<s:LinearGradient>
+					<s:GradientEntry color="#343434" color.selected="#b50000"/>
+					<s:GradientEntry color="#474747" color.selected="#9e0000"/>
+				</s:LinearGradient>
+			</s:fill>
+		</s:Rect>
+		
+		<s:HGroup height="100%" width="100%"  
+				  horizontalAlign="left" verticalAlign="middle">
+			
+			<s:VGroup width="100%" height="30" gap="4"
+					  horizontalAlign="left"
+					  paddingLeft="20" paddingTop="3">
+				<s:Label text="Empty" 
+						 textAlign="left" color="#ffffff" 
+						 fontWeight="bold" fontFamily="Arial" fontSize="12"/>
+			
+				<s:Label text="Select no recource" 
+						 textAlign="left" color="#ffffff" 
+						 fontWeight="normal" fontFamily="Arial" fontSize="10"/>
+			</s:VGroup>
+		</s:HGroup>
+	</s:Group>
+		
 	
 </s:ItemRenderer>
