don't load resource on select in resources list
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6947 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
@@ -22,7 +22,7 @@
 			
 			override public function set data ( value : Object ) : void 
 			{
-				trace ("!!!!!!!!! set data !!!!!!!!!!");
+				trace ("[ListItem] set data");
 				
 				super.data = value;
 				
