Fix problem of add id in MultilineWindow from ResourceSelectorWindow
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6948 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
@@ -67,7 +67,8 @@
 							text="{hostComponent.attributeValue}"
 							height="100%" width="100%"
 							minHeight="0"
-							backgroundColor="#FFFFFF" bottom="65" fontFamily="Courier New" fontSize="12" left="5" right="5" top="5" />
+							backgroundColor="#FFFFFF" bottom="65" fontFamily="Courier New" fontSize="12" left="5" right="5" top="5" 
+							creationComplete="textAreaContainer.setFocus()"/>
 	</s:Scroller>
 	
 	<s:Group width="100%" height="67">
